--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "request": "^2.58.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "chai": "^3.0.0",
+    "cheerio": "^0.19.0",
+    "mocha": "^2.2.5"
   }
 }
